--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <p>Welcome to express url shorterer</p>
 
-<form method="post" action="/handler">
+<form method="post" action="/new">
     <input type="text" name="url" /><br />
-    <input type="submit" />
+    <input type="submit" value="post url" />
 </form>
