--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,5 +3,5 @@
 
 <form method="post" action="/new">
     <input type="text" name="url" /><br />
-    <input type="submit" value="post url" />
+    <input type="submit" value="post url" style="margin-top: 5px" />
 </form>
